--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/customfileinput/component.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="asset/css/font-awesome/css/font-awesome.min.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/loading-bar.css">
@@ -33,7 +33,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/"><b>{{'nav.tieude' | translate }}</b></a>
+				<a class="navbar-brand" href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
