--- a/app/index.html
+++ b/app/index.html
@@ -84,10 +84,10 @@
 
 				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
 					<div class="input-group">
-				      	<input type="text" class="form-control" placeholder="Tìm kiếm...">
+				      	<!-- <input type="text" class="form-control" placeholder="Tìm kiếm..."> -->
 				      	<span class="input-group-btn">
-				        	<a ui-sref="tim-kiem" class="btn btn-default">
-				            	<span class=" glyphicon glyphicon-search SearchIcon"></span>
+				        	<a ui-sref="tim-kiem" class="btn btn-primary">
+				            	<span class=" glyphicon glyphicon-search"></span>
 				        	</a>
 				      	</span>
 				    </div>
