--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 					</li>
 				</ul>
 
-				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+				<!-- <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
 					<div class="input-group">
 				      	<!-- <input type="text" class="form-control" placeholder="Tìm kiếm..."> -->
 				      	<span class="input-group-btn">
@@ -91,11 +91,11 @@
 				        	</a>
 				      	</span>
 				    </div>
-					<!-- <div class="form-group">
+					<div class="form-group">
 						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
 					</div>
-					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a> -->
-				</form>
+					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a>
+				</form> -->
 			</div>
 		</div>
 	</nav>
