--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
 					</li>
 				</ul>
 
-			<!-- 	<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
-					<div class="input-group">
-				      	<input type="text" class="form-control" placeholder="Tìm kiếm...">
-				      	<span class="input-group-btn">
+				<!-- <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+					<div class="input-group"> -->
+				      	<!-- <input type="text" class="form-control" placeholder="Tìm kiếm..."> -->
+				<!--       	<span class="input-group-btn">
 				        	<a ui-sref="tim-kiem" class="btn btn-primary">
 				            	<span class=" glyphicon glyphicon-search"></span>
 				        	</a>
@@ -95,7 +95,7 @@
 						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
 					</div>
 					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a> -->
-				<!-- </form> -->
+				</form>
 			</div>
 		</div>
 	</nav>
