--- a/app/index.html
+++ b/app/index.html
@@ -82,19 +82,15 @@
 					</li>
 				</ul>
 
-				<!-- <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
-					<div class="input-group"> -->
+				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+					<div class="input-group">
 				      	<!-- <input type="text" class="form-control" placeholder="Tìm kiếm..."> -->
-				<!--       	<span class="input-group-btn">
+				      	<span class="input-group-btn">
 				        	<a ui-sref="tim-kiem" class="btn btn-primary">
 				            	<span class=" glyphicon glyphicon-search"></span>
 				        	</a>
 				      	</span>
-				    </div> -->
-					<!-- <div class="form-group">
-						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
-					</div>
-					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a> -->
+				    </div>
 				</form>
 			</div>
 		</div>
