--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/loading-bar.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
-	<link rel="stylesheet" href="/admin/plugins/datatables/dataTables.bootstrap.css">
+	<!-- <link rel="stylesheet" href="/admin/plugins/datatables/dataTables.bootstrap.css"> -->
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-inline-text-editor/ite.css">
 
 	<!-- css cho phan ban do -->
@@ -128,11 +128,10 @@
 	<script type="text/javascript" src="asset/js/angular-translate/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-translate/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-translate/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
-	<!-- <script type="text/javascript" src="asset/js/NoUiSlider/jquery.nouislider.js"></script> -->
-	<!-- <script type="text/javascript" src="asset/js/NoUiSlider/nouislider.js"></script> -->
 
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/ui-bootstrap-tpls-1.3.3.min.js"></script>
+	<script type="text/javascript" src="asset/js/angularjs-slider/rzslider.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-bar/loading-bar.js"></script>
