--- a/app/index.html
+++ b/app/index.html
@@ -39,24 +39,24 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
-					<li class="dropdown" ng-if="restricted.restrict">
+					<li class="dropdown" ng-if="restricted">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>{{'nav.themmauvat.tieude' | translate }}</b> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="them-co-sinh">{{'nav.themmauvat.cosinh' | translate}}</a></li>
-							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="them-dia-chat">{{'nav.themmauvat.diachat' | translate}}</a></li>
-							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="them-dong-vat">{{'nav.themmauvat.dongvat' | translate}}</a></li>
-							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="them-tho-nhuong">{{'nav.themmauvat.thonhuong' | translate}}</a></li>
-							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="them-thuc-vat">{{'nav.themmauvat.thucvat' | translate}}</a></li>
+							<li ng-if="restricted.cosinh.create"><a ui-sref="them-co-sinh">{{'nav.themmauvat.cosinh' | translate}}</a></li>
+							<li ng-if="restricted.diachat.create"><a ui-sref="them-dia-chat">{{'nav.themmauvat.diachat' | translate}}</a></li>
+							<li ng-if="restricted.dongvat.create"><a ui-sref="them-dong-vat">{{'nav.themmauvat.dongvat' | translate}}</a></li>
+							<li ng-if="restricted.thonhuong.create"><a ui-sref="them-tho-nhuong">{{'nav.themmauvat.thonhuong' | translate}}</a></li>
+							<li ng-if="restricted.thucvat.create"><a ui-sref="them-thuc-vat">{{'nav.themmauvat.thucvat' | translate}}</a></li>
 						</ul>
 					</li>
-					<li class="dropdown" ng-if="restricted.restrict">
+					<li class="dropdown" ng-if="restricted">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>{{'nav.quanly.tieude' | translate }}</b> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="quan-ly-co-sinh">{{'nav.quanly.cosinh' | translate }}</a></li>
-							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="quan-ly-dia-chat">{{'nav.quanly.diachat' | translate }}</a></li>
-							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="quan-ly-dong-vat">{{'nav.quanly.dongvat' | translate }}</a></li>
-							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong">{{'nav.quanly.thonhuong' | translate }}</a></li>
-							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="quan-ly-thuc-vat">{{'nav.quanly.thucvat' | translate }}</a></li>
+							<li ng-if="restricted.cosinh.create"><a ui-sref="quan-ly-co-sinh">{{'nav.quanly.cosinh' | translate }}</a></li>
+							<li ng-if="restricted.diachat.create"><a ui-sref="quan-ly-dia-chat">{{'nav.quanly.diachat' | translate }}</a></li>
+							<li ng-if="restricted.dongvat.create"><a ui-sref="quan-ly-dong-vat">{{'nav.quanly.dongvat' | translate }}</a></li>
+							<li ng-if="restricted.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong">{{'nav.quanly.thonhuong' | translate }}</a></li>
+							<li ng-if="restricted.thucvat.create"><a ui-sref="quan-ly-thuc-vat">{{'nav.quanly.thucvat' | translate }}</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -82,7 +82,7 @@
 					<!-- <li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li> -->
 					<li  ng-click="changeLang('vi')"><a href=""><img src="asset/image/vi.gif"></a></li>
 					<li class="dropdown">
-						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b ng-bind="restricted.user.fullname"></b><b class="caret"></b></a>
+						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b ng-bind="username"></b><b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="/admin"><b>{{'nav.taikhoan.quanly' | translate }}</b></a></li>
 							<li><a href="/users"><b>{{'nav.taikhoan.trangcanhan' | translate }}</b></a></li>
@@ -174,5 +174,16 @@
 	<script src="asset/js/ui-leaflet/dist/ui-leaflet.js"></script>
 	<script src="asset/js/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
 	<script src="asset/js/Leaflet.ExtraMarkers/src/leaflet.extra-markers.js"></script>
+<!-- 	<script type="text/javascript">
+		$.notify({
+			message: "Hello hola"
+		},{
+			type: 'danger',
+			animate: {
+				enter: 'animated fadeInDown',
+				exit: 'animated fadeOutUp'
+			}
+		});
+	</script> -->
 </body>
 </html>
