--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
 							<li ng-if="restricted.dongvat.create"><a ui-sref="them-dong-vat">{{'nav.themmauvat.dongvat' | translate}}</a></li>
 							<li ng-if="restricted.thonhuong.create"><a ui-sref="them-tho-nhuong">{{'nav.themmauvat.thonhuong' | translate}}</a></li>
 							<li ng-if="restricted.thucvat.create"><a ui-sref="them-thuc-vat">{{'nav.themmauvat.thucvat' | translate}}</a></li>
+							<li ng-if="restricted.nam.create"><a ui-sref="them-nam">{{'nav.themmauvat.nam' | translate}}</a></li>
 						</ul>
 					</li>
 					<li class="dropdown" ng-if="restricted">
@@ -57,6 +58,7 @@
 							<li ng-if="restricted.dongvat.create"><a ui-sref="quan-ly-dong-vat">{{'nav.quanly.dongvat' | translate }}</a></li>
 							<li ng-if="restricted.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong">{{'nav.quanly.thonhuong' | translate }}</a></li>
 							<li ng-if="restricted.thucvat.create"><a ui-sref="quan-ly-thuc-vat">{{'nav.quanly.thucvat' | translate }}</a></li>
+							<li ng-if="restricted.nam.create"><a ui-sref="quan-ly-nam">{{'nav.quanly.nam' | translate }}</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
